src/kPLingua/Input/Grammar/KpLinguaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from KpLingua.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class KpLinguaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, Identifier=21, RelationalOperator=22, Multiplicity=23, 
		Ws=24, Comment=25, LineComment=26;
	public const int
		RULE_kPsystem = 0, RULE_statement = 1, RULE_typeDefinition = 2, RULE_ruleSet = 3, 
		RULE_executionStrategy = 4, RULE_sequenceExecutionStrategy = 5, RULE_choiceExecutionStrategy = 6, 
		RULE_maxExecutionStrategy = 7, RULE_arbitraryExecutionStrategy = 8, RULE_rule = 9, 
		RULE_ruleRightHandSide = 10, RULE_ruleMultiset = 11, RULE_guard = 12, 
		RULE_andGuardExpression = 13, RULE_guardOperand = 14, RULE_emptyMultiset = 15, 
		RULE_multisetAtom = 16, RULE_nonEmptyMultiset = 17, RULE_typeReference = 18, 
		RULE_targetedMultiset = 19, RULE_linkCreation = 20, RULE_linkDestruction = 21, 
		RULE_dissolution = 22, RULE_division = 23, RULE_instance = 24, RULE_instantiation = 25, 
		RULE_link = 26, RULE_linkOperand = 27, RULE_linkWildcardOperand = 28;
	public static readonly string[] ruleNames = {
		"kPsystem", "statement", "typeDefinition", "ruleSet", "executionStrategy", 
		"sequenceExecutionStrategy", "choiceExecutionStrategy", "maxExecutionStrategy", 
		"arbitraryExecutionStrategy", "rule", "ruleRightHandSide", "ruleMultiset", 
		"guard", "andGuardExpression", "guardOperand", "emptyMultiset", "multisetAtom", 
		"nonEmptyMultiset", "typeReference", "targetedMultiset", "linkCreation", 
		"linkDestruction", "dissolution", "division", "instance", "instantiation", 
		"link", "linkOperand", "linkWildcardOperand"
	};

	private static readonly string[] _LiteralNames = {
		null, "'type'", "'{'", "'}'", "'choice'", "'max'", "'arbitrary'", "':'", 
		"'->'", "'.'", "','", "'|'", "'&'", "'('", "')'", "'-'", "'\\-'", "'#'", 
		"'['", "']'", "'*'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "Identifier", "RelationalOperator", 
		"Multiplicity", "Ws", "Comment", "LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "KpLingua.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static KpLinguaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}


		protected const int EOF = Eof;

		public KpLinguaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public KpLinguaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class KPsystemContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(KpLinguaParser.Eof, 0); }
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public KPsystemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_kPsystem; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitKPsystem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public KPsystemContext kPsystem() {
		KPsystemContext _localctx = new KPsystemContext(Context, State);
		EnterRule(_localctx, 0, RULE_kPsystem);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__19) | (1L << Identifier))) != 0)) {
				{
				{
				State = 58; statement();
				}
				}
				State = 63;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 64; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public TypeDefinitionContext typeDefinition() {
			return GetRuleContext<TypeDefinitionContext>(0);
		}
		public InstantiationContext instantiation() {
			return GetRuleContext<InstantiationContext>(0);
		}
		public LinkContext link() {
			return GetRuleContext<LinkContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 69;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 66; typeDefinition();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 67; instantiation();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 68; link();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDefinitionContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(KpLinguaParser.Identifier, 0); }
		public RuleSetContext ruleSet() {
			return GetRuleContext<RuleSetContext>(0);
		}
		public TypeDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDefinition; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeDefinitionContext typeDefinition() {
		TypeDefinitionContext _localctx = new TypeDefinitionContext(Context, State);
		EnterRule(_localctx, 4, RULE_typeDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71; Match(T__0);
			State = 72; Match(Identifier);
			State = 73; Match(T__1);
			State = 75;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__12) | (1L << Identifier) | (1L << RelationalOperator) | (1L << Multiplicity))) != 0)) {
				{
				State = 74; ruleSet();
				}
			}

			State = 77; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RuleSetContext : ParserRuleContext {
		public ExecutionStrategyContext[] executionStrategy() {
			return GetRuleContexts<ExecutionStrategyContext>();
		}
		public ExecutionStrategyContext executionStrategy(int i) {
			return GetRuleContext<ExecutionStrategyContext>(i);
		}
		public RuleSetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ruleSet; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRuleSet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RuleSetContext ruleSet() {
		RuleSetContext _localctx = new RuleSetContext(Context, State);
		EnterRule(_localctx, 6, RULE_ruleSet);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 79; executionStrategy();
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__12) | (1L << Identifier) | (1L << RelationalOperator) | (1L << Multiplicity))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExecutionStrategyContext : ParserRuleContext {
		public SequenceExecutionStrategyContext sequenceExecutionStrategy() {
			return GetRuleContext<SequenceExecutionStrategyContext>(0);
		}
		public ChoiceExecutionStrategyContext choiceExecutionStrategy() {
			return GetRuleContext<ChoiceExecutionStrategyContext>(0);
		}
		public MaxExecutionStrategyContext maxExecutionStrategy() {
			return GetRuleContext<MaxExecutionStrategyContext>(0);
		}
		public ArbitraryExecutionStrategyContext arbitraryExecutionStrategy() {
			return GetRuleContext<ArbitraryExecutionStrategyContext>(0);
		}
		public ExecutionStrategyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_executionStrategy; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExecutionStrategy(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExecutionStrategyContext executionStrategy() {
		ExecutionStrategyContext _localctx = new ExecutionStrategyContext(Context, State);
		EnterRule(_localctx, 8, RULE_executionStrategy);
		try {
			State = 88;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__12:
			case Identifier:
			case RelationalOperator:
			case Multiplicity:
				EnterOuterAlt(_localctx, 1);
				{
				State = 84; sequenceExecutionStrategy();
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 85; choiceExecutionStrategy();
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 3);
				{
				State = 86; maxExecutionStrategy();
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 4);
				{
				State = 87; arbitraryExecutionStrategy();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SequenceExecutionStrategyContext : ParserRuleContext {
		public RuleContext[] rule() {
			return GetRuleContexts<RuleContext>();
		}
		public RuleContext rule(int i) {
			return GetRuleContext<RuleContext>(i);
		}
		public SequenceExecutionStrategyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sequenceExecutionStrategy; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSequenceExecutionStrategy(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SequenceExecutionStrategyContext sequenceExecutionStrategy() {
		SequenceExecutionStrategyContext _localctx = new SequenceExecutionStrategyContext(Context, State);
		EnterRule(_localctx, 10, RULE_sequenceExecutionStrategy);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 90; rule();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 93;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChoiceExecutionStrategyContext : ParserRuleContext {
		public RuleContext[] rule() {
			return GetRuleContexts<RuleContext>();
		}
		public RuleContext rule(int i) {
			return GetRuleContext<RuleContext>(i);
		}
		public ChoiceExecutionStrategyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_choiceExecutionStrategy; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChoiceExecutionStrategy(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChoiceExecutionStrategyContext choiceExecutionStrategy() {
		ChoiceExecutionStrategyContext _localctx = new ChoiceExecutionStrategyContext(Context, State);
		EnterRule(_localctx, 12, RULE_choiceExecutionStrategy);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95; Match(T__3);
			State = 96; Match(T__1);
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << Identifier) | (1L << RelationalOperator) | (1L << Multiplicity))) != 0)) {
				{
				{
				State = 97; rule();
				}
				}
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 103; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MaxExecutionStrategyContext : ParserRuleContext {
		public RuleContext[] rule() {
			return GetRuleContexts<RuleContext>();
		}
		public RuleContext rule(int i) {
			return GetRuleContext<RuleContext>(i);
		}
		public MaxExecutionStrategyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_maxExecutionStrategy; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMaxExecutionStrategy(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MaxExecutionStrategyContext maxExecutionStrategy() {
		MaxExecutionStrategyContext _localctx = new MaxExecutionStrategyContext(Context, State);
		EnterRule(_localctx, 14, RULE_maxExecutionStrategy);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105; Match(T__4);
			State = 106; Match(T__1);
			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << Identifier) | (1L << RelationalOperator) | (1L << Multiplicity))) != 0)) {
				{
				{
				State = 107; rule();
				}
				}
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 113; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArbitraryExecutionStrategyContext : ParserRuleContext {
		public RuleContext[] rule() {
			return GetRuleContexts<RuleContext>();
		}
		public RuleContext rule(int i) {
			return GetRuleContext<RuleContext>(i);
		}
		public ArbitraryExecutionStrategyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arbitraryExecutionStrategy; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArbitraryExecutionStrategy(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArbitraryExecutionStrategyContext arbitraryExecutionStrategy() {
		ArbitraryExecutionStrategyContext _localctx = new ArbitraryExecutionStrategyContext(Context, State);
		EnterRule(_localctx, 16, RULE_arbitraryExecutionStrategy);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115; Match(T__5);
			State = 116; Match(T__1);
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << Identifier) | (1L << RelationalOperator) | (1L << Multiplicity))) != 0)) {
				{
				{
				State = 117; rule();
				}
				}
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 123; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RuleContext : ParserRuleContext {
		public NonEmptyMultisetContext nonEmptyMultiset() {
			return GetRuleContext<NonEmptyMultisetContext>(0);
		}
		public RuleRightHandSideContext ruleRightHandSide() {
			return GetRuleContext<RuleRightHandSideContext>(0);
		}
		public GuardContext guard() {
			return GetRuleContext<GuardContext>(0);
		}
		public RuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RuleContext rule() {
		RuleContext _localctx = new RuleContext(Context, State);
		EnterRule(_localctx, 18, RULE_rule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				{
				State = 125; guard();
				State = 126; Match(T__6);
				}
				break;
			}
			State = 130; nonEmptyMultiset();
			State = 131; Match(T__7);
			State = 132; ruleRightHandSide();
			State = 133; Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RuleRightHandSideContext : ParserRuleContext {
		public EmptyMultisetContext emptyMultiset() {
			return GetRuleContext<EmptyMultisetContext>(0);
		}
		public RuleMultisetContext[] ruleMultiset() {
			return GetRuleContexts<RuleMultisetContext>();
		}
		public RuleMultisetContext ruleMultiset(int i) {
			return GetRuleContext<RuleMultisetContext>(i);
		}
		public DivisionContext[] division() {
			return GetRuleContexts<DivisionContext>();
		}
		public DivisionContext division(int i) {
			return GetRuleContext<DivisionContext>(i);
		}
		public DissolutionContext dissolution() {
			return GetRuleContext<DissolutionContext>(0);
		}
		public LinkCreationContext linkCreation() {
			return GetRuleContext<LinkCreationContext>(0);
		}
		public LinkDestructionContext linkDestruction() {
			return GetRuleContext<LinkDestructionContext>(0);
		}
		public RuleRightHandSideContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ruleRightHandSide; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRuleRightHandSide(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RuleRightHandSideContext ruleRightHandSide() {
		RuleRightHandSideContext _localctx = new RuleRightHandSideContext(Context, State);
		EnterRule(_localctx, 20, RULE_ruleRightHandSide);
		int _la;
		try {
			State = 152;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 135; emptyMultiset();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 136; ruleMultiset();
				State = 141;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__9) {
					{
					{
					State = 137; Match(T__9);
					State = 138; ruleMultiset();
					}
					}
					State = 143;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 144; division();
					}
					}
					State = 147;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==T__17 );
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 149; dissolution();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 150; linkCreation();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 151; linkDestruction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RuleMultisetContext : ParserRuleContext {
		public NonEmptyMultisetContext nonEmptyMultiset() {
			return GetRuleContext<NonEmptyMultisetContext>(0);
		}
		public TargetedMultisetContext targetedMultiset() {
			return GetRuleContext<TargetedMultisetContext>(0);
		}
		public RuleMultisetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ruleMultiset; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRuleMultiset(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RuleMultisetContext ruleMultiset() {
		RuleMultisetContext _localctx = new RuleMultisetContext(Context, State);
		EnterRule(_localctx, 22, RULE_ruleMultiset);
		try {
			State = 156;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,13,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 154; nonEmptyMultiset();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 155; targetedMultiset();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GuardContext : ParserRuleContext {
		public AndGuardExpressionContext[] andGuardExpression() {
			return GetRuleContexts<AndGuardExpressionContext>();
		}
		public AndGuardExpressionContext andGuardExpression(int i) {
			return GetRuleContext<AndGuardExpressionContext>(i);
		}
		public GuardContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_guard; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpLinguaVisitor<TResult> typedVisitor = visitor as IKpLinguaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGuard(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GuardContext guard() {
		GuardContext _localctx = new GuardContext(Context, State);
		EnterRule(_localctx, 24, RULE_guard);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 158; andGuardExpression();
			State = 163;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__10) {
				{
				{
				State = 159; Match(T__10);
				State = 160; andGuardExpression();
				}
				}
				State = 165;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
